# nobs-editor-dev

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: mirror-to-public.yml  release.yml
.spets/: config.yml
.spets/hooks/: cleanup-branch.sh
.spets/outputs/2026-01-27-build-a-fi-ekfv/: .state.json  01-plan.md  02-implement.md
.spets/outputs/2026-01-28-cover-othe-4nku/: .state.json
.spets/outputs/2026-01-28-cover-othe-knpc/: .state.json  01-plan.md  02-implement.md
.spets/outputs/2026-01-28-i-want-oth-wxw9/: .state.json  01-plan.md  02-implement.md
.spets/outputs/2026-01-28-iterm-6ore/: .state.json  01-plan.md  02-implement.md
.spets/outputs/2026-01-28-looks-like-wmtv/: .state.json  01-plan.md  02-implement.md
.spets/outputs/2026-01-28-when-i-ope-lo6v/: .state.json
.spets/outputs/2026-01-29-add-a-styl-ktzi/: .state.json  01-plan.md  02-implement.md
.spets/outputs/2026-01-29-fix-multip-isg3/: .state.json  01-plan.md  02-implement.md
.spets/outputs/2026-01-29-h1-custom-2ikv/: .state.json  01-plan.md  02-implement.md
.spets/outputs/2026-01-29-i-want-a-b-62rp/: .state.json  01-plan.md  02-implement.md
.spets/outputs/2026-01-29-i-want-sea-3ros/: .state.json  01-plan.md  02-implement.md
.spets/outputs/2026-01-29-improve-st-n81o/: .state.json  01-plan.md  02-implement.md
.spets/outputs/2026-01-29-make-it-op-dgld/: .state.json  01-plan.md  02-implement.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+53 files in other folders)
